Fix nav title not centered

--- a/client/assets/index.css
+++ b/client/assets/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Cascadia+Code:ital,wght@0,200..700;1,200..700&display=swap');
+
 :root {
   --color-grey-0: #fff;
   --color-grey-50: #f9fafb;
@@ -60,6 +62,7 @@ nav {
   border-bottom: 1px solid transparent;
   background-color: var(--color-blue-400);
   color: white;
+  text-align: center;
 
   display: flex;
   align-items: center;
@@ -95,13 +98,23 @@ footer {
   background-color: var(--color-blue-800);
 }
 
+nav a {
+  flex-basis: 10rem;
+}
+
 .logo img {
-  height: 5rem;
+  height: 3rem;
 }
 
 .title {
+  font-family: 'Cascadia Code';
   font-size: 28px;
   font-weight: bold;
+  flex-basis: 10rem;
+}
+
+.buttons {
+  flex-basis: 10rem;
 }
 
 .buttons button {
@@ -120,6 +133,8 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  padding: 2rem;
 }
 
 .home-image {
